# MIRAI

./: Cargo.toml  Dockerfile  install_mirai.sh
.github/workflows/: docker.yml  os-checker-release.yml
