[workspace]
resolver = "2"

members = [
    "annotations",
    "checker",
    "standard_contracts",
    "examples/taint",
    "examples/shopping_cart",
    "examples/tag_analysis/timing_channels",
    "examples/tag_analysis/untrustworthy_inputs",
    "examples/tag_analysis/verification_status",
    "examples/tag_analysis/trait_methods",
]

[profile.release]
debug = true

[profile.bench]
debug = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
# targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
targets = ["x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
